# test

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package-lock.json  package.json  sdkconfig.defaults
.github/workflows/: build-firmware.yml
components/definitions/: CMakeLists.txt  definition_catalog.c  definition_reader.c  definition_source.c
components/definitions/include/: definition_catalog.h  definition_reader.h  definition_source.h
components/hid_console/: CMakeLists.txt  hid_console.c
components/hid_console/include/: hid_console.h
components/hid_usage/: CMakeLists.txt  hid_usage.c
components/hid_usage/include/: hid_usage.h
components/m5stack_tab5/: m5stack_tab5.c
components/platform_tab5/: CMakeLists.txt  tabvia_usb.c
components/platform_tab5/include/: tabvia_usb.h
components/ui/: CMakeLists.txt  tabvia_ui.c
components/ui/include/: tabvia_ui.h
components/via_protocol/: CMakeLists.txt  via_protocol.c
components/via_protocol/include/: via_protocol.h
components/via_transport/: CMakeLists.txt  via_transport.c
components/via_transport/include/: via_transport.h
docs/: ARCHITECTURE.md  INSTALL.md  PARITY.md  VALIDATION.md
main/: CMakeLists.txt  app_main.c  idf_component.yml
tests/: CMakeLists.txt  protocol_test.c
tools/: validate-with-reader.mjs
